feat: Use underscores consistently in API
