# app/handlers/cardDelete.ts
@@ -3,7 +3,7 @@ import { OpenAPIHandler } from "../types/openapi";
 import removeDeviceCard from "../utils/serial/removeDeviceCard";
 
 export default (async function cardDelete(req, res) {
-  const result = await removeDeviceCard(req.params.cardPosition);
+  const result = await removeDeviceCard(req.params.card_position);
 
   if (result) {
     res.sendStatus(204);
